--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,15 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.locations-dropdown {
+    position: absolute !important;
+    width: 95vw;
+    left: -45vw;
+}
+
+.categories-dropdown {
+    position: absolute !important;
+    width: 70vw;
+    left: -15vw;
+}
